Hide overflow content on .page. Helps prevent some gnarly bugs on mobile when the content is too wide.

--- a/stylesheets/coffin.css
+++ b/stylesheets/coffin.css
@@ -20,11 +20,13 @@ body {
 }
 
 .container {
+  overflow: hidden;
   width: 580px;
   margin-left: 40px;
 }
 
 .page {
+  overflow: hidden;
   position: relative;
   z-index: 10;
   margin-left: 170px;
